# cabanasucre

./: .gitignore  CabanaSucre.drawio  README.md  bouillage_controle.py  requirements.txt  setup.py  start_cabanasucre.sh  start_console.sh  test_requirements.txt
bouillage/: pyproject.toml
bouillage/bouillage/: bouillage.py
bouillage/tests/: test_bouillage_controle.py
bouillage_ctrl_cmd/: bouillage_controle.py  console_sucrier.py  test_bouillage_controle.py
commun/: README.md  pyproject.toml
commun/cabanasucre_commun/: lcd_i2c.py
console_sucrier/: pyproject.toml
console_sucrier/console_sucrier/: console.py
exemples/: test.py
fake_gpio/: setup.py
fake_gpio/RPi/: GPIO.py
fake_smbus/: setup.py  smbus.py
fake_smbus/smbus/: smbus.py
inventory/: hosts
inventory/group_vars/: all.yml
kafka/: kafkabanasucre-manifest.yaml
scripts/: alertes.sh  build.sh  deploy.yml  niveau.sh  temp.sh
scripts/templates/: service.j2
tests/: test_bouillage_controle.py
