[tool.poetry]
name = "bouillage"
version = "0.1.3"
description = "Module de contrôle pour le bouillage de sirop d'érable"
authors = ["elfelip <elfelip@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mock-gpio = "^0.2.0"
inspqkafka = "^0.9.1"
rpi-lgpio = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bouillage = "bouillage.main:main"
