[tool.poetry]
name = "cabanasucre-commun"
version = "0.1.0"
description = "Module commun pour les composants de cabanasucre"
authors = ["elfelip <elfelip@yahoo.com>","Matthew Timmons-Brown (the-raspberry-pi-guy)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mock-gpio = "^0.2.0"
rpi-lgpio = "^0.6"
smbus = "^1.1.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
